--- a/THANKS
+++ b/THANKS
@@ -29,6 +29,7 @@ Mark Kettenis <kettenis@phys.uva.nl>
 Mimi Burbank <mimi@scri.fsu.edu>
 Oliver Guntermann <og@informatik.uni-hannover.de>
 Raffaele Sena <raff@aromatic.com>
+Ron O'Hara <rono@sentuny.com.au>
 Sebastian Wilhelmi <wilhelmi@ira.uka.de>
 Stephan Kulow <coolo@kde.org>
 Thomas Esser <te@informatik.uni-hannover.de>
