--- a/THANKS
+++ b/THANKS
@@ -9,6 +9,7 @@ time and energy in helping to track down bugs, port to new systems,
 and generally assist in the libtool maintainership process:
 
 Akim Demaille <demaille@inf.enst.fr>
+Andrey Slepuhin <pooh@msu.ru>
 Bruno Haible <haible@ilog.fr>
 Carl D. Roth <roth@cse.ucsc.edu>
 Charles S. Kerr <cskerr@delenn.jccbi.gov>
@@ -25,6 +26,7 @@ Joseph Beckenbach III <jrb3@best.com>
 Karl Berry <kb@cs.umb.edu>
 Kenneth Albanowski <kjahds@kjahds.com>
 Marc J. Fraioli <fraioli@dg-rtp.dg.com>
+Mark Elbrecht <snowball3@usa.net>
 Mark Kettenis <kettenis@phys.uva.nl>
 Mimi Burbank <mimi@scri.fsu.edu>
 Oliver Guntermann <og@informatik.uni-hannover.de>
