--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ NEWS - list of user-visible changes between releases of GNU Libtool
 New in 1.2e: CVS version:
 * Support -R for specifying run-time path of programs and library dependencies
 * Support for BeOS
-* Improved support for Win32, SysV 4.3, BSD/OS 4.x and NetBSD
+* Improved support for Win32, aix3, aix4, SysV 4.3, BSD/OS 4.x and NetBSD
 * Various bugfixes
 
 New in 1.2c: CVS version; 1.2d: 1998-12-16, Libtool team:
