--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-01-17  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* mdemo/Makefile.am (../libltdl/libltdlc.la): depend on
+	../libtool, because ../libltdl/libtool depends on it
+	(mdemo_debug_*): copy from mdemo_*, adding -static to LDFLAGS
+
 	* ltmain.in (dlpredeps): append dependencies from dlopened modules 
 	(but not dlpreopened ones) after all explicitly linked libraries
 
