--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ New in 1.2e: CVS version:
 * Support -R for specifying run-time path of programs and library dependencies
 * Support for BeOS
 * Improved support for Win32, aix3, aix4, SysV 4.3, BSD/OS 4.x and NetBSD
+* New -avoid-version option to avoid versioning for libraries
 * Various bugfixes
 
 New in 1.2c: CVS version; 1.2d: 1998-12-16, Libtool team:
