--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+1999-01-18  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* Makefile.am (libltdl.tar.gz): don't create it as part of the
+	build, since it is likely to become stale if we do
+	(install-data-hook): create and install libltdl.tar.gz, without
+	depending on GNU tar
+	Reported by Manfred Weichel <Manfred.Weichel@pdb.siemens.de>
+
 1999-01-17  Thomas Tanner  <tanner@gmx.de>
 
 	* Makefile.am: added libltdl.tar.gz to CLEANFILES
