track deplibs for hardcode_action switch

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+1999-01-19  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
+
+	* ltconfig.in (compile_dependencylbs): removed this
+	variable and pick up the library dependencies from $deplibs.
+	* ltmain.in (compile_dependencylibs): removed this
+	variable, use deplibs to hold these dependencies.
+
+	From Andrey Slepuhin <pooh@msu.ru>
+	(hardcode_action) make sure deplibs is set to include all the
+	extra libs added to compile_command.
+
 1999-01-18  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* libtool.m4 (LIBTOOL_DEPS): set it
