--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-01-19  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltmain.in (lt_preloaded_setup): function added to symbol list
+	source file to work around FreeBSD problem
+
 	* Makefile.am (check-local): depend on libltdl/Makefile
 
 	* mdemo/Makefile.am (mdemo_LDFLAGS, mdemo_LDADD): moved -dlopen
