--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-01-20  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltmain.in (dlpredeps): removed, reverting 1999-01-17's change
+
 1999-01-19  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* libltdl/Makefile.am (Makefile): depend on libtool
